# programslice

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  README.txt  TODO  buildout.cfg  index.html  params.json  programslice.cabal  setup.py  stack.yaml
app/: Main.hs
docker/: docker-compose.yml
docker/ghc780/: Dockerfile
docs/: CHANGES.rst  api.rst  code-documentation.rst  commandline-api.rst  conf.py  credits.rst  design.rst  development.rst  index.rst  intro.rst  screenshots.rst  vim.rst
programslice/: __init__.py  formatter.py  graph.py  package.py  path.py  visitor.py  visualize.py
programslice/tests/: conftest.py  slice_forward.txt  test_commandline.py  test_doctests.py  test_graph.py  test_path.py  test_slice_forward.txt  test_visitor.py
programslice/tests/testdata/: assign.py  binop.py  binsearch.py  function.py  overlapping.py
src/: IR.hs  Main.hs  Parse.hs  PythonAst2IR.hs  PythonHoopl.hs
src/Programslice/: Parse.hs  Visualisation.hs
src/Programslice/Python/: ControlFlow.hs  Hoopl.hs
src/Python/: ControlFlow.hs  Hoopl.hs
src/tests/testdata/: binsearch.py
tests/: Doctests.hs  Fixtures.hs  Main.hs  Unit.hs
tests/data/: function.py
vim/: __init__.py  programslice.py  programslice.vim
