name:                programslice
version:             0.1.0
synopsis:            Slices programs.
homepage:            http://www.romanofski.de
license:             GPL-3
license-file:        LICENSE
author:              Róman Joost
maintainer:          roman@bromeco.de
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Programslice.Python.ControlFlow
                     , Programslice.Parse
                     , Programslice.Visualisation
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <4.8
                     , containers
                     , language-python
                     , graphviz
                     , hoopl >= 3.10.0.1
                     , mtl >= 2.0

executable programslice
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <4.8
                     , programslice
                     , language-python
                     , hoopl >= 3.10.0.1
                     , containers
                     , pretty-show
                     , mtl >= 2.0
                     , graphviz
                     , text
  default-language:    Haskell2010

test-suite unittests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && <4.8
                     , tasty-hunit
                     , tasty
                     , HUnit
                     , programslice
                     , language-python
                     , hoopl >= 3.10.0.1

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Doctests.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && <4.8
                     , doctest
                     , programslice
                     , language-python
                     , hoopl >= 3.10.0.1

source-repository head
  type: git
  location: https://github.com/romanofski/programslice